# fix_engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  change-notes.txt  commit-message.txt  compile_commands.json  docker-compose.yml  dockerfile  example_prom_format.prom  git-commit-file.sh  run_benchmarks.sh  run_tests.sh
archive/: FIXMessageBuilder.hpp  SBEMessageBuilder.hpp  SBEMessageParser.cpp  SBEMessageParser.hpp
benchmarks/: BenchmarkFormatter.hpp  BenchmarkLogger.hpp  BenchmarkRunner.cpp  CMakeLists.txt  FIXMessageBenchmark.cpp  FIXMessageBuilderBenchmarkFormatter.hpp  LFQueueBenchmark.cpp  LFQueueBenchmarkFormatter.hpp  MetricCalcs.hpp  main_FIXMessageBenchmark.cpp  main_LFQueueBenchmark.cpp
include/: Client.hpp  FIXBuffer.hpp  FIXEngine.hpp  FIXHeartbeat.hpp  FIXLogon.hpp  FIXLogout.hpp  FIXMessage.hpp  FIXMessageBase.hpp  FIXMessageBuilder.hpp  FIXMessageParser.hpp  FIXNetworkHandler.hpp  FIXNewOrderSingle.hpp  FIXOrderCancelReplaceRequest.hpp  FIXOrderCancelRequest.hpp  FIXTestRequest.hpp  LFQueue.hpp  Macros.hpp  MemoryPool.hpp  NetworkProfiler.hpp  Order.hpp  PerformanceLogger.hpp  SBEMessageParser.hpp  SampleOrders.hpp  Server.hpp
logs/benchmarks/: fix_benchmark_results.csv  prometheus.prom
logs/benchmarks/csv/: fix_benchmark_results.csv  lf_queue_results.csv
logs/benchmarks/prometheus/: prometheus.prom  prometheus_1741735140.prom  prometheus_1741735152.prom  prometheus_1741735911.prom
logs/benchmarks/prometheus/active/: prometheus_1741801547.prom  prometheus_1741884162.prom  prometheus_1741898960.prom  prometheus_1742344121.prom  prometheus_1742344130.prom  prometheus_1742586183.prom  prometheus_1742587691.prom  prometheus_1742587699.prom
logs/benchmarks/prometheus/archive/: prometheus_1741733998.prom  prometheus_1741734008.prom  prometheus_1741734023.prom  prometheus_1741734038.prom  prometheus_1741735921.prom  prometheus_1741738427.prom  prometheus_1741738538.prom  prometheus_1741800083.prom  prometheus_1741800766.prom  prometheus_1741800871.prom  prometheus_1741801432.prom  prometheus_1742327489.prom  prometheus_1742327681.prom  prometheus_1742327896.prom  prometheus_1742336361.prom  prometheus_1742336508.prom  prometheus_1742336698.prom  prometheus_1742336937.prom  prometheus_1742337674.prom  prometheus_1742338758.prom  prometheus_1742339686.prom  prometheus_1742339884.prom  prometheus_1742340314.prom  prometheus_1742340322.prom  prometheus_1742340486.prom  prometheus_1742341412.prom  prometheus_1742341863.prom  prometheus_1742341871.prom  prometheus_1742342277.prom  prometheus_1742342286.prom  prometheus_1742342674.prom  prometheus_1742342683.prom  prometheus_1742342852.prom  prometheus_1742342861.prom  prometheus_1742343179.prom  prometheus_1742343187.prom  prometheus_1742404707.prom  prometheus_1742404715.prom  prometheus_1742572589.prom  prometheus_1742573205.prom  (+15 more)
monitoring/: prometheus.yml
monitoring/prometheus/: prometheus.yml
notes/: benchmark-notes.txt  change-notes.txt
schemas/: messages.xml
schemas/FIXSchemas/: fix-message-schema.xml
schemas/examples/fix_examples/: messages.xml
scripts/: cleanup_prometheus_files.sh  codec_script.sh  commit_suite.sh  git-commit-file.sh  run_benchmarks.sh  run_tests.sh
src/: Client.cpp  FIXEngine.cpp  FIXMessageBuilder.cpp  FIXMessageParser.cpp  FIXNetworkHandler.cpp  NetworkProfiler.cpp  PerformanceLogger.cpp  SBEMessageBuilder.cpp  Server.cpp  main.cpp
tests/: CMakeLists.txt  test_FIXMessages.cpp  test_LFQueue.cpp  test_MemoryPool.cpp
